--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.1",
     "@tanstack/react-query": "^5.50.1",
+    "axios": "^1.9.0",
     "phaser": "^3.88.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
