--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mysten/dapp-kit": "0.14.33",
+    "@mysten/enoki": "^0.6.11",
     "@mysten/sui": "1.14.3",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.0",
@@ -18,9 +19,10 @@
     "@tanstack/react-query": "^5.50.1",
     "axios": "^1.9.0",
     "phaser": "^3.88.2",
-    "react": "^18.3.1",
+    "react": "link:@mysten/enoki/react",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "transactions": "link:@mysten/sui.js/transactions"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
